// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  margin: 0.5rem 1rem;
  color: red;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin: 0.25rem 0.5rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should accept flex item props 1`] = `
.emotion-0 {
  margin: 0.5rem 1rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc((100% / 12 * 6) - 2rem);
}

@media (max-width:1280px) {
  .emotion-0 {
    margin: 0.25rem 0.5rem;
  }
}

@media (max-width:1280px) {
  .emotion-0 {
    width: calc((100% / 12 * 6) - 1rem);
  }
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  margin: 0.5rem 1rem;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin: 0.25rem 0.5rem;
  }
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;
